fix more tests